@@ -1,3 +1,7 @@
+2014-05-21 Konstas Marmatakis marmako@gmail.com
+	* tkbak.py: Minor bugfixes and improvements.
+
+
 2014-05-20 Konstas Marmatakis marmako@gmail.com
 	* tkbak.py: Minor bugfixes.
 
